// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. does not render an image if display is not received 1`] = `""`;

exports[`2. does not render a primary image if ratio is not received 1`] = `""`;

exports[`3. does not render an inline image with no ratio and no caption or credits 1`] = `""`;

exports[`4. inline image with no ratio only shows caption and credits 1`] = `
<responsive__InsetCaptionContainerStyle>
  <div>
    <figcaption>
      <tc-view__TcView>
        <div>
          <tc-view__TcView>
            <div>
              <tc-text__TcText>
                <div>
                  Some caption
                </div>
              </tc-text__TcText>
              <tc-text__TcText
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SOME CREDIT",
                  }
                }
              >
                <div
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "SOME CREDIT",
                    }
                  }
                />
              </tc-text__TcText>
            </div>
          </tc-view__TcView>
        </div>
      </tc-view__TcView>
    </figcaption>
  </div>
</responsive__InsetCaptionContainerStyle>
`;

exports[`5. image with no caption 1`] = `
Array [
  <tc-view__TcView>
    <div>
      <tc-view__TcView
        testID="Image"
      >
        <div>
          <div>
            <responsive
              alt={null}
              loading="lazy"
              src="https://img/someImage"
              zIndex={2}
            >
              <img
                alt={null}
                loading="lazy"
                src="https://img/someImage"
              />
            </responsive>
          </div>
        </div>
      </tc-view__TcView>
    </div>
  </tc-view__TcView>,
  "",
]
`;

exports[`6. image with no display only shows given caption 1`] = `
<tc-view__TcView>
  <div>
    <tc-view__TcView>
      <div>
        <tc-view__TcView>
          <div>
            <tc-text__TcText>
              <div>
                Some caption
              </div>
            </tc-text__TcText>
          </div>
        </tc-view__TcView>
      </div>
    </tc-view__TcView>
  </div>
</tc-view__TcView>
`;

exports[`7. image with no display only shows given credits 1`] = `
<tc-view__TcView>
  <div>
    <tc-view__TcView>
      <div>
        <tc-view__TcView>
          <div>
            <tc-text__TcText
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SOME CREDIT",
                }
              }
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SOME CREDIT",
                  }
                }
              />
            </tc-text__TcText>
          </div>
        </tc-view__TcView>
      </div>
    </tc-view__TcView>
  </div>
</tc-view__TcView>
`;

exports[`8. primary image renders with caption and credits 1`] = `
Array [
  <tc-view__TcView>
    <div>
      <tc-view__TcView
        testID="Image"
      >
        <div>
          <div>
            <responsive
              alt="Some caption"
              loading="lazy"
              src="https://img/someImage"
              zIndex={2}
            >
              <img
                alt="Some caption"
                loading="lazy"
                src="https://img/someImage"
              />
            </responsive>
          </div>
        </div>
      </tc-view__TcView>
    </div>
  </tc-view__TcView>,
  <tc-view__TcView>
    <div>
      <responsive__InsetCaptionStyle>
        <div>
          <tc-view__TcView>
            <div>
              <tc-view__TcView>
                <div>
                  <tc-text__TcText>
                    <div>
                      Some caption
                    </div>
                  </tc-text__TcText>
                  <tc-text__TcText
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "SOME CREDIT",
                      }
                    }
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "SOME CREDIT",
                        }
                      }
                    />
                  </tc-text__TcText>
                </div>
              </tc-view__TcView>
            </div>
          </tc-view__TcView>
        </div>
      </responsive__InsetCaptionStyle>
    </div>
  </tc-view__TcView>,
]
`;

exports[`9. primary image with given resolutions 1`] = `
Array [
  <tc-view__TcView>
    <div>
      <tc-view__TcView
        testID="Image"
      >
        <div>
          <div>
            <responsive
              alt="Some caption"
              loading="lazy"
              src="https://img/someImage?resize=900"
              zIndex={2}
            >
              <img
                alt="Some caption"
                loading="lazy"
                src="https://img/someImage?resize=900"
              />
            </responsive>
          </div>
        </div>
      </tc-view__TcView>
    </div>
  </tc-view__TcView>,
  <tc-view__TcView>
    <div>
      <responsive__InsetCaptionStyle>
        <div>
          <tc-view__TcView>
            <div>
              <tc-view__TcView>
                <div>
                  <tc-text__TcText>
                    <div>
                      Some caption
                    </div>
                  </tc-text__TcText>
                  <tc-text__TcText
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "SOME CREDIT",
                      }
                    }
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "SOME CREDIT",
                        }
                      }
                    />
                  </tc-text__TcText>
                </div>
              </tc-view__TcView>
            </div>
          </tc-view__TcView>
        </div>
      </responsive__InsetCaptionStyle>
    </div>
  </tc-view__TcView>,
]
`;
